--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -20,9 +20,9 @@
     </fieldset>
     <div class="form-group">
       <button class="btn btn-info" type="submit">Update</button>
-
+      <a class="ml-5" href="{% url 'profile' %}"><input type="button" class="btn btn-danger" value="Cancel"></a>
     </div>
-
   </form>
+  
 </div>
 {% endblock content %}
