--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -22,7 +22,7 @@
 				<td><input type="checkbox" title="Mark as Done" class="form-check-input mark_as_done"
 						id="{{ task.id }}"></td>
 				<td colspan="2">
-					<h4 align="left" id="title{{ task.id }}">{{ task.task_title }}</h4>
+					<h4 class="text-left" id="title{{ task.id }}">{{ task.task_title }}</h4>
 				</td>
 				<td>
 
@@ -57,7 +57,7 @@
 				<td><input type="checkbox" title="Mark as Undone" class="form-check-input mark_as_undone"
 						id="{{ task.pk }}" checked></td>
 				<td>
-					<h4 align="left" class="completed_tasks" id="title{{ task.pk }}">{{ task.task_title }}</h4>
+					<h4 class="text-left completed_tasks" id="title{{ task.pk }}">{{ task.task_title }}</h4>
 				</td>
 				<td class="button-row"></td>
 			</tr>
