--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,12 +2,12 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
-  <div class="media border row p-2">
-    <img class="row-md-3 m-2 mr-3 rounded-circle account-img" src="{{ user.profile.image.url }}">
-    <div class="row-md-9 media-body">
+  <div class="media border row center-block d-flex justify-content-center p-3">
+    <img class="rounded-circle account-img img-responsive pull-left" src="{{ user.profile.image.url }}">
+    <div class="media-body ml-4">
       <h3 class="account-heading">{{ user.username }}</h3>
       <p class="text-secondary">{{ user.email }}</p>
-      <a href="{% url 'edit_profile' %}"><button class="btn btn-danger">Edit Profile</button></a>
+      <a href="{% url 'edit_profile' %}"><button class="btn btn-danger" style="border-radius: 18px;">Edit Profile</button></a>
     </div>
   </div>
 </div>
