--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -1,4 +1,12 @@
 {% extends "to_do_app/base.html" %}
 {% block content %}
-    <h1>Welcome to To-Do App</h1>
+<div class="jumbotron text-center homepage_div">
+    <h1 class="homepage_title">Welcome to <span style="color: rgb(233, 241, 107); font-weight: bold;">#To-Do</span> App
+    </h1>
+    <small class="tag_line"><span style="color: rgb(236, 150, 38); font-weight: bolder; font-size: 32px;">#</span>All
+        your tasks at one place</small>
+</div>
+<div class="container">
+
+</div>
 {% endblock content %}
