--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -27,7 +27,7 @@
 				<td>
 
 					<i class="fa fa-pencil-square-o update_btns" title="Edit Task" style='color:#0ba8c1;'></i>
-					<i class="fa fa-check" id="update_task_btn" title="Update"
+					<i class="fa fa-check update_task_btn" title="Update"
 						style="color: rgb(16, 172, 211); display: none;"></i>
 					<i class="fa fa-close deleterow delete_existing_row" title="Delete Task"
 						style='color:red; float:right;'></i>
