--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -5,6 +5,7 @@ body {
 
 .table td {
     padding-left: 20px;
+    background-color: beige;
 }
 
 .form-check-input {
@@ -113,11 +114,20 @@ table>table {
 }
 
 .homepage_div {
-    background-image: url("https://image.shutterstock.com/image-illustration/website-element-blue-bubbles-page-260nw-1177725427.jpg");
+    /*background-image: url("https://image.shutterstock.com/image-illustration/website-element-blue-bubbles-page-260nw-1177725427.jpg");*/
+    background-color: #312b2b;
     background-size: cover;
 }
 
 .tag_line {
-    color: white;
+    color: #f59d8e;
     font-size: 18px;
+    font-family: cursive;
+}
+
+.homepage_buttons {
+    padding: 10px;
+    font-size: 22px;
+    border-radius: 36px;
+    width: 120px;
 }
