--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -3,10 +3,14 @@
 <div class="jumbotron text-center homepage_div">
     <h1 class="homepage_title">Welcome to <span style="color: rgb(233, 241, 107); font-weight: bold;">#To-Do</span> App
     </h1>
-    <small class="tag_line"><span style="color: rgb(236, 150, 38); font-weight: bolder; font-size: 32px;">#</span>All
-        your tasks at one place</small>
+    <small class="tag_line">
+        #All your tasks at one place</small>
 </div>
-<div class="container">
-
+<div class=" text-center mt-5">
+    <div class="btn-group">
+        <a class="m-auto" href="{% url 'login' %}"><button
+                class="btn btn-success homepage_buttons">Login</button></a>&nbsp;
+        <a class="ml-3" href="{% url 'register' %}"><button class="btn btn-info homepage_buttons">Sign Up</button></a>
+    </div>
 </div>
 {% endblock content %}
