--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -3,8 +3,9 @@
 <div class="jumbotron text-center homepage_div">
     <h1 class="homepage_title">Welcome to <span style="color: rgb(233, 241, 107); font-weight: bold;">#To-Do</span> App
     </h1>
-    <small class="tag_line">
-        #All your tasks at one place</small>
+    <div id="tag_line">
+    <small class="tag_line">#All your tasks at one place</small>
+    </div>
 </div>
 <div class=" text-center mt-5">
     <div class="btn-group">
