--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -66,11 +66,11 @@ body {
     background-color: indigo;
 }
 
-#list-container {
+#list-container1, #list-container2 {
     text-align: center;
     padding: 20px;
     width: 90%;
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .auth-section {
@@ -130,4 +130,8 @@ table>table {
     font-size: 22px;
     border-radius: 36px;
     width: 120px;
+}
+
+#tag_line {
+    display: none;
 }
