--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -1,7 +1,7 @@
 {% extends "to_do_app/base.html" %}
 {% block content %}
 
-<div class="container" id="list-container">
+<div class="container" id="list-container1">
 
 	<table class="table table-hover" id="maintable">
 		<thead class="thead-dark">
@@ -9,6 +9,7 @@
 				<h2>Active Tasks</h2>
 			</th>
 		</thead>
+
 		<tbody>
 			<tr>
 				<td colspan=4>
@@ -37,7 +38,8 @@
 			{% endfor %}
 		</tbody>
 	</table>
-
+</div>
+<div class="container mt-3" id="list-container2">
 	<table class="table mt-3" id="completed-table">
 		<thead class="thead-green">
 			<th colspan=4>
@@ -54,7 +56,9 @@
 			{% for task in tasks %}
 			{% if task.is_checked %}
 			<tr>
-				<td><input type="checkbox" title="Mark as Undone" class="form-check-input mark_as_undone"
+				<td>
+					
+					<input type="checkbox" title="Mark as Undone" class="form-check-input mark_as_undone"
 						id="{{ task.pk }}" checked></td>
 				<td>
 					<h4 class="text-left completed_tasks" id="title{{ task.pk }}">{{ task.task_title }}</h4>
