Tweaked admin.py files and some UI changes

--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -135,3 +135,15 @@ table>table {
 #tag_line {
     display: none;
 }
+
+.btn_my_tasks {
+    color: white;
+    background-color: darkblue;
+    border-radius: 20px;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.btn_my_tasks:hover {
+    color: rgba(233, 236, 15, 0.979);
+}
