--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,5 +10,8 @@
       <a href="{% url 'edit_profile' %}"><button class="btn btn-danger" style="border-radius: 18px;">Edit Profile</button></a>
     </div>
   </div>
+  <div class="user_tasks media border row center-block d-flex justify-content-center pt-2 mt-3">
+    <h4>All the User Tasks go here...</h4>
+    </div>
 </div>
 {% endblock content %}
