Showing users tasks in his profile -  Complete

--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -170,12 +170,31 @@ footer {
     border-radius: 30px;
 }
 
+/*
 .user_tasks {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+}*/
 
 #add_task_btn {
     border-radius: 18px;
     float: right;
+}
+
+.active_tasks_profile {
+    color: red;
+    background-color: rgb(241 215 215);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+}
+
+.completed_tasks_profile {
+    color: green;
+    background-color: rgb(180, 233, 180);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+}
+
+ul {
+    padding-inline-start: 22px;
 }
