--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -61,7 +61,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tasks' %}" style="color: white;"><strong>My Lists</strong></a>
+                        <a class="nav-link" href="{% url 'tasks' %}" style="color: white;"><strong>My Tasks</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}" style="color: white;"><strong>Logout</strong></a>
