--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,36 +10,38 @@
       <a href="{% url 'edit_profile' %}"><button class="btn btn-danger" style="border-radius: 18px;">Edit
           Profile</button></a>
     </div>
-  </div>
-  <div class="container user_tasks mt-3">
-    <h4 style="text-align:center; color: rgba(5, 0, 12, 0.692);"><u>My Tasks</u></h4>
     
-    <div class="container row p-3 m-auto">
-      <div class="col-sm-5 col-xs-5 active_tasks_profile">
-        <p style="text-align: center;"><strong>Active Tasks</strong></p>
-        <ul>
-          {% for task in tasks %}
-          {% if not task.is_checked %}
-          <li>{{ task.task_title }}</li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="col-sm-2 col-xs-2"></div>
-      <br>
-      <div class="col-sm-5 col-xs-5 completed_tasks_profile">
-        <p style="text-align: center;"><strong>Completed Tasks</strong></p>
-        <ul>
-          {% for task in tasks %}
-          {% if task.is_checked %}
-          <li>{{ task.task_title }}</li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  
   </div>
+  
+  <h4 class="mt-3" style="text-align:center; color: rgba(5, 0, 12, 0.692);"><u>My Tasks</u></h4>
+
+  <div class="container row p-3 m-auto">
+    <div class="col-sm-5 col-xs-5 active_tasks_profile">
+      <p style="text-align: center;"><strong>Active Tasks({{ active_count }})</strong></p>
+      <ul>
+        {% for task in tasks %}
+        {% if not task.is_checked %}
+        <li>{{ task.task_title }}</li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="col-sm-2 col-xs-2"></div>
+
+    <br>
+    <div class="col-sm-5 col-xs-5 completed_tasks_profile">
+      <p style="text-align: center;"><strong>Completed Tasks({{ completed_count }})</strong></p>
+      <ul>
+        {% for task in tasks %}
+        {% if task.is_checked %}
+        <li>{{ task.task_title }}</li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  {% endblock content %}
 </div>
-</div>
-{% endblock content %}
+
+
+
