--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -74,9 +74,9 @@ body {
     text-align: center;
     padding: 20px;
     width: 90%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     display: table;
-    border-radius: 30px;
+    /*border-radius: 30px;*/
 }
 
 .auth-section {
@@ -196,17 +196,22 @@ footer {
     padding: 10px;
 }
 
+table {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 ul {
     padding-inline-start: 22px;
 }
 
 @media only screen and (max-width: 600px) {
     .form-check-input {
-        width: 24px;
-        height: 24px;
+        width: 22px;
+        height: 22px;
     }
     .text-left {
-        font-size: 17px;
+        font-size: 15px;
+        display: table-row;
     }
     .fa {
         font-size: 22px;
@@ -223,5 +228,8 @@ ul {
     .media-body {
         text-align: center;
     }
+   td:first-child {
+       padding-left: 24px;
+   }
    
 }
