--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -30,6 +30,7 @@
 
     <!-- Link to FontAwesome Icons CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
     <!-- Link to Css File -->
     <link rel="stylesheet" type="text/css" href="{% static 'to_do_app/main.css' %}">
@@ -41,9 +42,9 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-indigo fixed-top">
             {% if user.is_authenticated %}
-            <a class="navbar-brand font-weight-bold" href="{% url 'tasks' %}" style="font-size: 38px;">To-Do App</a>
+            <a class="navbar-brand font-weight-bold" href="{% url 'tasks' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;To-Do App</a>
             {% else %}
-            <a class="navbar-brand font-weight-bold" href="{% url 'index' %}" style="font-size: 38px;">To-Do App</a>
+            <a class="navbar-brand font-weight-bold" href="{% url 'index' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;To-Do App</a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
