Changed the Landing page

--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -214,6 +214,10 @@ ul {
     border-bottom: 1px solid #fff;
 }
 
+.sect_container {
+    background-color: #dc3545;
+}
+
 /* CSS for Mobile Phone Screens */
 
 @media only screen and (max-width: 600px) {
