--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -1,21 +1,112 @@
-{% extends "to_do_app/base.html" %}
+{% load static %}
 {% block content %}
-<div class="jumbotron text-center homepage_div">
-    <h1 class="homepage_title">Welcome to <span style="color: rgb(233, 241, 107); font-weight: bold;">#To-Do</span> App
-    </h1>
-    <div id="tag_line">
-        <small class="tag_line">#All your tasks at one place</small>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class=" text-center mt-5">
-    <div class="btn-group">
-        {% if not user.is_authenticated %}
-        <a href="{% url 'login' %}"><button class="btn btn-success homepage_buttons m-auto">Login</button></a>&nbsp;
-        <a href="{% url 'register' %}"><button class="btn btn-info homepage_buttons ml-3">Sign Up</button></a>
-        {% else %}
-        <a class="ml-3" href="{% url 'tasks' %}"><button class="btn btn_my_tasks">Go to My Lists</button></a>
-    </div>
-</div>
-{% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{%  static 'to_do_app/favicon.png' %}">
+    <link rel="stylesheet" href="{% static 'to_do_app/main.css' %}">
+
+    <title>To-Do App</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Condensed:wght@700&display=swap');
+
+        * {
+            background-color: indigo;
+            font-family: 'Roboto Condensed', sans-serif;
+            justify-content: center;
+            text-align: center;
+            max-width: 100%;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        .main_header {
+            color: #fff;
+            font-size: 6rem;
+        }
+
+        .flex {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            margin-top: 6%;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 30px;
+            cursor: pointer;
+            color: #fff;
+            border-radius: 5px;
+            margin: 10px 10px;
+            background-color: transparent;
+            border: 1px solid white;
+            font-size: 1.5rem;
+        }
+
+        .btn:hover {
+            transform: scale(0.97);
+            color: black;
+            background-color: #fff;
+        }
+
+        .card {
+            text-align: center;
+            justify-content: center;
+            margin: 10%;
+            /* margin-top: 15%;
+            margin-bottom: -15%; */
+        }
+
+        .footer {
+            position: fixed;
+            color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
+            right: 20px;
+            bottom: 20px;
+        }
+
+        @media only screen and (max-width: 600px) {
+            .main_header {
+                font-size: 4rem;
+            }
+        }
+    </style>
+
+</head>
+
+<body>
+    <section class="card">
+        <div class="sect_container">
+            <h2 class="main_header">To-Do Application</h2>
+        </div>
+        <div class="flex">
+            {% if not user.is_authenticated %}
+            <a href="{% url 'login' %}">
+                <div class="btn">Login</div>
+            </a>
+            <a href="{% url 'register' %}">
+                <div class="btn">Register</div>
+            </a>
+            {% else %}
+            <a href="{% url 'tasks' %}">
+                <div class="btn">Go to My Tasks</div>
+            </a>
+            {% endif %}
+        </div>
+
+    </section>
+    <section class="footer">
+        <p>Powered by <u>Django</u></p>
+    </section>
+</body>
+
+</html>
 {% endblock content %}
