Changed Password Reset Done HTML code

--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -3,4 +3,5 @@
 <div class='alert alert-info'>
     An email has been sent with instructions to your registered email.
 </div>
+<a href="{% url 'login' %}">Back to Login</a>
 {% endblock content %}
