Updating lat modified date using JS - Done

--- a/to_do/templates/to_do_app/tasks.html
+++ b/to_do/templates/to_do_app/tasks.html
@@ -49,7 +49,7 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<small class="text-muted">Last modified on: {{ max_date|date:"F j, Y" }}</small>
+	<small class="text-muted timestamp">Last modified on: {{ max_date|date:"F j, Y" }}</small>
 </div>
 
 <div class="container" id="list-container2">
