--- a/to_do/static/to_do_app/main.css
+++ b/to_do/static/to_do_app/main.css
@@ -218,6 +218,10 @@ ul {
     background-color: #dc3545;
 }
 
+.text-left {
+    font-size: 1.25rem;
+}
+
 /* CSS for Mobile Phone Screens */
 
 @media only screen and (max-width: 600px) {
