--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -43,9 +43,9 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-indigo fixed-top">
             {% if user.is_authenticated %}
-            <a class="navbar-brand font-weight-bold" href="{% url 'tasks' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;To-Do App</a>
+            <a class="navbar-brand font-weight-bold" href="{% url 'tasks' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;<span class="brand_name">To-Do App</span></a>
             {% else %}
-            <a class="navbar-brand font-weight-bold" href="{% url 'index' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;To-Do App</a>
+            <a class="navbar-brand font-weight-bold" href="{% url 'index' %}" style="font-size: 38px;"><i class="fas fa-tasks"></i>&nbsp;<span class="brand_name">To-Do App</span></a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
