--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container content-section">
   <div class="media border row center-block d-flex justify-content-center p-3">
-    <img class="rounded-circle account-img img-responsive pull-left" src="{{ user.profile.image.url }}">
+    <img class="rounded-circle account-img img-responsive pull-left" src="/media/default.png">
     <div class="container media-body m-auto">
       <h3 class="account-heading">{{ name }}</h3>
       <p class="text-secondary">{{ user.email }}</p>
