--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -58,7 +58,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}" style="color: rgb(240, 229, 85);"
                             title="View Profile">
-                            <img class="rounded-circle" width="28" height="28" src="/media/default.png">
+                            <img class="rounded-circle" width="28" height="28" src="{{ user.profile.image.url }}">
                             <strong>{{ user.username }}</strong>
                         </a>
                     </li>
