--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+	<meta name="google-site-verification" content="TGQ1MIxiR7bOVmSGZ_CDPiBP7KwE8PIIlIlDt2Gk0fs" />
     <meta charset="UTF-8">
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
