--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="TGQ1MIxiR7bOVmSGZ_CDPiBP7KwE8PIIlIlDt2Gk0fs" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
