Add meta description

--- a/to_do/templates/to_do_app/index.html
+++ b/to_do/templates/to_do_app/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta name="google-site-verification" content="TGQ1MIxiR7bOVmSGZ_CDPiBP7KwE8PIIlIlDt2Gk0fs" />
+    <meta name="description" content="A To-do list application to save your tasks, mark them complete/incomplete. Powered by Django.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
