Add curr_year to footer

--- a/to_do/templates/to_do_app/base.html
+++ b/to_do/templates/to_do_app/base.html
@@ -92,7 +92,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer class="mt-auto">
-        <p class="m-auto">&copy; 2020 - All Rights Reserved</p>
+        <p class="m-auto">&copy; {{ year }} - All Rights Reserved</p>
     </footer>
 </body>
 
